js262/test/language/expressions/assignmenttargettype/parenthesized-primaryexpression-functionexpression.js


/*---
description: PrimaryExpression FunctionExpression, Return invalid. (ParenthesizedExpression)
esid: sec-grouping-operator-static-semantics-assignmenttargettype
flags: [generated]
negative:
  phase: parse
  type: SyntaxError
info: |
    ParenthesizedExpression: (Expression)

    Return AssignmentTargetType of Expression.
---*/

$DONOTEVALUATE();

(function() {}) = 1;
